Add interactive features: mobile menu, typing effect, 3D tilt, scroll progress

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +10,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <div class="cursor"></div>
+    <div class="cursor-follower"></div>
+    <div class="scroll-progress"></div>
     <nav class="navbar">
         <div class="logo">Alex.</div>
+        <div class="menu-toggle">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
         <ul class="nav-links">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -22,7 +32,8 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1 class="fade-in">Building Digital <span class="gradient-text">Experiences</span></h1>
+            <h1 class="fade-in">Building Digital <span class="typing-text"></span><span class="cursor-blink">|</span>
+            </h1>
             <p class="fade-in delay-1">I craft visually stunning and performant websites.</p>
             <a href="#projects" class="btn fade-in delay-2">View Work</a>
         </div>
@@ -32,7 +43,8 @@
         <div class="container">
             <h2 class="section-title fade-in">About Me</h2>
             <div class="about-content fade-in">
-                <p>I am a passionate developer with a keen eye for design. I specialize in building modern web applications that not only work perfectly but look amazing.</p>
+                <p>I am a passionate developer with a keen eye for design. I specialize in building modern web
+                    applications that not only work perfectly but look amazing.</p>
             </div>
         </div>
     </section>
@@ -84,4 +96,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
