--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
     <title>Portfolio | Creative Developer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
-</head>
-
-<body>
-    <div class="cursor"></div>
     <div class="cursor-follower"></div>
     <div class="scroll-progress"></div>
     <nav class="navbar">
@@ -83,9 +77,7 @@
         <div class="container">
             <h2 class="section-title fade-in">Leave a Review</h2>
             <div class="review-container fade-in">
-                <form id="review-form" action="https://api.web3forms.com/submit" method="POST" class="review-form">
-                    <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
-
+                <form id="review-form" class="review-form">
                     <div class="form-group">
                         <input type="text" name="name" placeholder="Your Name" required>
                     </div>
@@ -130,6 +122,6 @@
     </footer>
 
     <script src="script.js"></script>
-</body>
+    </body>
 
 </html>
