--- a/index.html
+++ b/index.html
@@ -7,6 +7,18 @@
     <title>Portfolio | Creative Developer</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("MPz0VK-Yy_17MvWDG");
+        })();
+    </script>
+</head>
+
+<body>
+    <div class="cursor"></div>
     <div class="cursor-follower"></div>
     <div class="scroll-progress"></div>
     <nav class="navbar">
@@ -122,6 +134,6 @@
     </footer>
 
     <script src="script.js"></script>
-    </body>
+</body>
 
 </html>
