Update name to Adeen and fix HTML duplication

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="cursor-follower"></div>
     <div class="scroll-progress"></div>
     <nav class="navbar">
-        <div class="logo">Alex.</div>
+        <div class="logo">Adeen.</div>
         <div class="menu-toggle">
             <div class="bar"></div>
             <div class="bar"></div>
@@ -130,146 +130,10 @@
     </section>
 
     <footer>
-        <!DOCTYPE html>
-        <html lang="en">
+        <p>&copy; 2024 Adeen. All rights reserved.</p>
+    </footer>
 
-        <head>
-            <meta charset="UTF-8">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Portfolio | Creative Developer</title>
-            <link rel="stylesheet" href="style.css">
-            <link rel="preconnect" href="https://fonts.googleapis.com">
-            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-            <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&display=swap"
-                rel="stylesheet">
-            <script type="text/javascript"
-                src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-            <script type="text/javascript">
-                (function () {
-                    emailjs.init("MPz0VK-Yy_17MvWDG");
-                })();
-            </script>
-        </head>
+    <script src="script.js"></script>
+</body>
 
-        <body>
-            <div class="cursor"></div>
-            <div class="cursor-follower"></div>
-            <div class="scroll-progress"></div>
-            <nav class="navbar">
-                <div class="logo">Alex.</div>
-                <div class="menu-toggle">
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                    <div class="bar"></div>
-                </div>
-                <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#reviews">Reviews</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-
-            <section id="home" class="hero">
-                <div class="hero-content">
-                    <h1 class="fade-in">Building Digital <span class="typing-text"></span><span
-                            class="cursor-blink">|</span>
-                    </h1>
-                    <p class="fade-in delay-1">I craft visually stunning and performant websites.</p>
-                    <a href="#projects" class="btn fade-in delay-2">View Work</a>
-                </div>
-            </section>
-
-            <section id="about" class="section">
-                <div class="container">
-                    <h2 class="section-title fade-in">About Me</h2>
-                    <div class="about-content fade-in">
-                        <p>I am a passionate developer with a keen eye for design. I specialize in building modern web
-                            applications that not only work perfectly but look amazing.</p>
-                    </div>
-                </div>
-            </section>
-
-            <section id="projects" class="section">
-                <div class="container">
-                    <h2 class="section-title fade-in">Selected Work</h2>
-                    <div class="project-grid">
-                        <div class="project-card fade-in">
-                            <div class="card-image"></div>
-                            <div class="card-info">
-                                <h3>E-Commerce Platform</h3>
-                                <p>A modern shopping experience built with Next.js.</p>
-                            </div>
-                        </div>
-                        <div class="project-card fade-in delay-1">
-                            <div class="card-image"></div>
-                            <div class="card-info">
-                                <h3>Finance Dashboard</h3>
-                                <p>Real-time data visualization for fintech.</p>
-                            </div>
-                        </div>
-                        <div class="project-card fade-in delay-2">
-                            <div class="card-image"></div>
-                            <div class="card-info">
-                                <h3>Social App</h3>
-                                <p>Connecting people with shared interests.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <section id="reviews" class="section">
-                <div class="container">
-                    <h2 class="section-title fade-in">Leave a Review</h2>
-                    <div class="review-container fade-in">
-                        <form id="review-form" class="review-form">
-                            <div class="form-group">
-                                <input type="text" name="name" placeholder="Your Name" required>
-                            </div>
-
-                            <div class="form-group">
-                                <label>Rating</label>
-                                <div class="star-rating">
-                                    <i class="star" data-value="1">★</i>
-                                    <i class="star" data-value="2">★</i>
-                                    <i class="star" data-value="3">★</i>
-                                    <i class="star" data-value="4">★</i>
-                                    <i class="star" data-value="5">★</i>
-                                </div>
-                                <input type="hidden" name="rating" id="rating-value" required>
-                            </div>
-
-                            <div class="form-group">
-                                <textarea name="message" placeholder="Your Review" rows="4" required></textarea>
-                            </div>
-
-                            <button type="submit" class="btn">Submit Review</button>
-                            <p id="form-message"></p>
-                        </form>
-                    </div>
-                </div>
-            </section>
-
-            <section id="contact" class="section">
-                <div class="container">
-                    <h2 class="section-title fade-in">Get in Touch</h2>
-                    <form class="contact-form fade-in">
-                        <input type="text" placeholder="Name" required>
-                        <input type="email" placeholder="Email" required>
-                        <textarea placeholder="Message" rows="5" required></textarea>
-                        <button type="submit" class="btn">Send Message</button>
-                    </form>
-                </div>
-            </section>
-
-            <footer>
-                <p>&copy; 2024 Alex. All rights reserved.</p>
-            </footer>
-
-            <script src="script.js"></script>
-        </body>
-
-        </html>
-        <!-- Force rebuild -->
+</html>
